增加动画效果，修改后台登录模块，支持修改个人信息，尝试引入mavon编辑器

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -23,6 +23,11 @@ body{
   justify-content: center;
 }
 
+.f-vertical-center{
+  display: flex;
+  justify-content: center;
+}
+
 .f-space-between{
   display: flex;
   justify-content: space-between;
